fix: overlap of list menu

--- a/src/app/pages/lists-page/lists-page.component.scss
+++ b/src/app/pages/lists-page/lists-page.component.scss
@@ -17,7 +17,7 @@ mat-sidenav-content {
 }
 
 mat-sidenav {
-  max-width: min(100vw, 400px);
+  width: min(100vw, 400px);
   background: rgba(17, 24, 39, 0.3);
   border-right: solid 1px rgba(17, 24, 39, 0.4);
   backgroud-clip: padding-box;
